--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,152 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.title {
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  font-size: 36px;
+}
+
+.title:hover {
+  color: yellowgreen;
+}
+
+.navbar {
+  background-color: #40826d;
+}
+
+.title.active {
+  color: #fff;
+}
+
+.link {
+  padding-top: 20px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.link:hover {
+  color: yellowgreen;
+  font-weight: bold;
+}
+
+.link.active {
+  color: yellowgreen;
+}
+
+.section {
+  margin: 0 auto;
+  text-align: center;
+  background-color: #40826d;
+  padding: 25px;
+  color: #fff;
+  width: 80%;
+}
+
+.footer {
+  background-color: #40826d;
+  color: #fff;
+  font-size: 32px;
+  padding: 40px;
+  text-align: center;
+  position: relative; 
+  bottom: 0; 
+  width: 100%
+}
+
+.contact {
+  background-color: #40826d;
+  color: #fff;
+  text-align: center;
+  padding: 50px;
+}
+
+button {
+  font-size: 15px;
+  text-decoration: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: yellow;
+  color: #000;
+}
+
+button:hover {
+  color: var(--blue);
+  background-color: #fff;
+  font-weight: bold;
+  border: 1px solid var(--blue);
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+button[disabled] {
+  cursor: default;
+  opacity: 0.8;
+}
+
+.piano-container {
+  display: inline-flex;
+  border-top: 10px solid blue;
+}
+
+.piano-natural-key {
+  width: 50px;
+  height: 180px;
+  cursor: pointer;
+  background: #fafafa;
+  margin: 0 2px;
+  color: #444;
+  padding: 10px;
+  border-radius: 0 0 3px 3px;
+}
+
+.piano-text {
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: 1rem;
+}
+
+.piano-natural-key-playing {
+  border-bottom: 10px solid blue;
+  color: blue;
+}
+
+.piano-accidental-key-wrapper {
+  position: relative;
+  width: 0;
+}
+
+.piano-accidental-key {
+  position: absolute;
+  cursor: pointer;
+  transform: translateX(-50%);
+  width: 36px;
+  height: 120px;
+  border-radius: 0 0 3px 3px;
+  border-top: none;
+  padding: 5px;
+  outline: none;
+  color: #fff;
+}
+
+@media screen and (max-width: 280px) {
+  .section {
+    font-size: 15px;
+  }
 }
