--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ code {
     monospace;
 }
 
+.navbar {
+  text-align: center;
+}
+
 .title {
   font-weight: bold;
   text-decoration: none;
@@ -34,6 +38,7 @@ code {
   padding-top: 20px;
   color: #fff;
   text-decoration: none;
+  padding: 20px;
   font-size: 24px;
 }
 
@@ -43,6 +48,12 @@ code {
 }
 
 .link.active {
+  color: yellowgreen;
+}
+
+.about {
+  display: flex;
+  justify-content: center;
   color: yellowgreen;
 }
 
@@ -58,7 +69,7 @@ code {
 .footer {
   background-color: #40826d;
   color: #fff;
-  font-size: 32px;
+  font-size: 20px;
   padding: 40px;
   text-align: center;
   position: relative; 
@@ -83,19 +94,19 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
-  background-color: yellow;
+  background-color: yellowgreen;
   color: #000;
 }
 
 button:hover {
-  color: var(--blue);
-  background-color: #fff;
+  color: #fff;
+  background-color: #000;
+  border: none;
   font-weight: bold;
-  border: 1px solid var(--blue);
-  padding-top: 14px;
-  padding-bottom: 14px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 button[disabled] {
@@ -104,8 +115,8 @@ button[disabled] {
 }
 
 .piano-container {
-  display: inline-flex;
-  border-top: 10px solid blue;
+  display: flex;
+  justify-content: center;
 }
 
 .piano-natural-key {
@@ -125,11 +136,6 @@ button[disabled] {
   align-items: flex-end;
   justify-content: center;
   font-size: 1rem;
-}
-
-.piano-natural-key-playing {
-  border-bottom: 10px solid blue;
-  color: blue;
 }
 
 .piano-accidental-key-wrapper {
